sandbox/output
MedicineClashTest.java:27: error: cannot find symbol
        assertEquals(clashedSet, medicineClash.Of(medicineTakingCustomers));
                     ^
  symbol:   variable clashedSet
  location: class MedicineClashTest
MedicineClashTest.java:27: error: cannot find symbol
        assertEquals(clashedSet, medicineClash.Of(medicineTakingCustomers));
                                                  ^
  symbol:   variable medicineTakingCustomers
  location: class MedicineClashTest
MedicineClashTest.java:27: error: cannot find symbol
        assertEquals(clashedSet, medicineClash.Of(medicineTakingCustomers));
                                 ^
  symbol:   variable medicineClash
  location: class MedicineClashTest
3 errors
